--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <section class="about" id="page2">
                 <div class="inner">
-                    <img class="title" src="img/01ABOUT.png" alt="01 ABOUT">
+                    <img class="title" src="img/01about.png" alt="01 ABOUT">
                     <p>코드를 통해 아이디어를 현실로 만드는 퍼블리셔 성혜리입니다.</p>
                     <div class="about_wrap">
                         <div>
